--- a/www/home.html
+++ b/www/home.html
@@ -58,13 +58,8 @@
 		</div>
 
 		<header class="bar bar-nav">
-			<a id="freccia_indietro" class="icon icon-left-nav pull-left"></a>
 			<a id="menu_btn" class="icon icon-bars pull-left"></a>
-			<a class="icon pull-right iconSpara" data-ignore="push" href="selezionaAvvistamento.html">
-				<span class="media-object pull-right">
-					<img src="img/profMirino.png" class="followersImage">
-				</span>
-			</a>
+			<a class="icon icon-compose pull-right" data-ignore="push" href="cambiaStatus.html"></a>
 			<a class="icon icon-search pull-right" data-ignore="push" href="ricerca.html"></a>
   			<h2 id= "titleNavigation" class="titleNavigation">Università dell'Aquila</h2>
 		</header>
@@ -162,8 +157,10 @@
 					</span>
 				</a>
 
-				<a class="tab-item" data-ignore="push" href="cambiaStatus.html">
-					<span class="icon icon-compose"></span>
+				<a class="tab-item" data-ignore="push" href="selezionaAvvistamento.html">
+					<span class="media-object">
+						<img src="img/profMirino.png" class="followersImage">
+					</span>
 				</a>
 
 				<a class="tab-item" data-ignore="push" href="gestione_notifiche.html">
