--- a/www/selezionaAvvistamento.html
+++ b/www/selezionaAvvistamento.html
@@ -39,7 +39,7 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-			<a class="icon icon-left-nav pull-left" data-ignore="push" data-transition="slide" href="index.html"></a>
+			<!-- <a class="icon icon-left-nav pull-left" data-ignore="push" data-transition="slide" href="index.html"></a> -->
 			<h1 id= "titleNavigation" class="titleNavigation">Scegli chi segnalare</h1>
 		</header>
 
@@ -60,6 +60,37 @@
 
 			</div>
 		</div>
+		<nav class="bar bar-tab">
+			<a class="tab-item active tab-item-selected" data-ignore="push" href="index.html">
+				<span class="icon icon-home"></span>
+			</a>
+
+			<a class="tab-item" data-ignore="push" href="home.html">
+				<span class="media-object">
+					<img src="img/launchpad.png" class="followersImage">
+				</span>
+			</a>
+
+			<a class="tab-item" data-ignore="push" href="selezionaAvvistamento.html">
+				<span class="media-object">
+					<img src="img/profMirino.png" class="followersImage">
+				</span>
+			</a>
+
+			<a class="tab-item" data-ignore="push" href="gestione_notifiche.html">
+				<span class="media-object">
+					<img src="img/notifiche.png" class="followersImage">
+				</span>
+			</a>
+			<a class="tab-item" data-ignore="push" href="listaFollowers.html">
+				<span class="media-object">
+					<img src="img/followers.png" class="followersImage">
+				</span>
+			</a>
+
+		</nav>
+
+
 	</body>
 		<!-- Tab Bar -->
 
