--- a/www/cambiaStatus.html
+++ b/www/cambiaStatus.html
@@ -39,6 +39,8 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
+			<a class="icon icon-left-nav pull-left" data-ignore="push" data-transition="slide" href="index.html"></a>
+
   			<h2 id="titleNavigation">Cambia Status</h2>
 		</header>
 
@@ -71,33 +73,6 @@
 		</div>
 		<!-- Tab Bar -->
 
-		<nav class="bar bar-tab">
-			<a class="tab-item active tab-item-selected" data-ignore="push" href="index.html">
-				<span class="icon icon-home"></span>
-			</a>
-
-			<a class="tab-item" data-ignore="push" href="index.html">
-				<span class="media-object">
-					<img src="img/launchpad.png" class="followersImage">
-				</span>
-			</a>
-
-			<a class="tab-item" data-ignore="push" href="cambiaStatus.html">
-				<span class="icon icon-compose"></span>
-			</a>
-
-			<a class="tab-item" data-ignore="push" href="gestione_notifiche.html">
-				<span class="media-object">
-					<img src="img/notifiche.png" class="followersImage">
-				</span>
-			</a>
-			<a class="tab-item" data-ignore="push" href="listaFollowers.html">
-				<span class="media-object">
-					<img src="img/followers.png" class="followersImage">
-				</span>
-			</a>
-
-		</nav>
 		<script src="js/profWatch.js"></script>
 
   	</body>
