--- a/www/home.html
+++ b/www/home.html
@@ -58,9 +58,10 @@
 		</div>
 
 		<header class="bar bar-nav">
+			<!--
 			<a id="menu_btn" class="icon icon-bars pull-left"></a>
 			<a class="icon icon-compose pull-right" data-ignore="push" href="cambiaStatus.html"></a>
-			<a class="icon icon-search pull-right" data-ignore="push" href="ricerca.html"></a>
+			<a class="icon icon-search pull-right" data-ignore="push" href="ricerca.html"></a>-->
   			<h2 id= "titleNavigation" class="titleNavigation">Università dell'Aquila</h2>
 		</header>
 
