--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,7 @@
 		<script src="libs/SnapJs/snap.min.js"></script>
 		<script src="js/main.js"></script>
 
+
         <script src="libs/jquery.mobile.custom/jquery.mobile.custom.min.js"></script>
 		<script>
 	    	$(document).bind('mobileinit',function(){
@@ -612,6 +613,8 @@
 			</a>
 		</nav>
 	 <script src="js/widgets.js"></script>
+	 <script src="js/navigation.js"></script>
+
   	</body>
 
 </html>
