--- a/www/selezionaPosizioneAvvistamento.html
+++ b/www/selezionaPosizioneAvvistamento.html
@@ -97,13 +97,15 @@
 				      </a>
 				    </li>
 				  </ul>
-					  <button class="btn btn-positive btn-block">Segnala</button>
+				  <button id="buttonPosizione" class="btn btn-positive btn-block">Segnala</button>
   			  </form>
 			</div>
 		</div>
-		
-		<script src="js/profWatch.js"></script>
 
+		<div id="selezionaPos" class="modal">
+			<span>Segnalazione avvenuta</span>
+		</div>
+		<script src="js/profWatch.js"></script>
   	</body>
 
 </html>
