--- a/www/gestione_notifiche.html
+++ b/www/gestione_notifiche.html
@@ -81,14 +81,16 @@
 				<span class="icon icon-home"></span>
 			</a>
 
-			<a class="tab-item" data-ignore="push" href="index.html">
+			<a class="tab-item" data-ignore="push" href="home.html">
 				<span class="media-object">
 					<img src="img/launchpad.png" class="followersImage">
 				</span>
 			</a>
 
-			<a class="tab-item" data-ignore="push" href="cambiaStatus.html">
-				<span class="icon icon-compose"></span>
+			<a class="tab-item" data-ignore="push" href="selezionaAvvistamento.html">
+				<span class="media-object">
+					<img src="img/profMirino.png" class="followersImage">
+				</span>
 			</a>
 
 			<a class="tab-item" data-ignore="push" href="gestione_notifiche.html">
