--- a/www/gestione_notifiche.html
+++ b/www/gestione_notifiche.html
@@ -35,10 +35,13 @@
 
   	</head>
   	<body>
-		<!-- Title bar -->
 		<header class="bar bar-nav">
-  			<h1 class="title">Centro Notifiche</h1>
+			<a id="menu_btn" class="icon icon-bars pull-left"></a>
+			<a class="icon icon-compose pull-right" data-ignore="push" href="cambiaStatus.html"></a>
+			<a class="icon icon-search pull-right" data-ignore="push" href="ricerca.html"></a>
+			<h2 id= "titleNavigation" class="titleNavigation">Centro Notifiche</h2>
 		</header>
+
 
 			<div class="content spazio-nav">
 
