--- a/www/home.html
+++ b/www/home.html
@@ -58,11 +58,10 @@
 		</div>
 
 		<header class="bar bar-nav">
-			<!--
 			<a id="menu_btn" class="icon icon-bars pull-left"></a>
 			<a class="icon icon-compose pull-right" data-ignore="push" href="cambiaStatus.html"></a>
-			<a class="icon icon-search pull-right" data-ignore="push" href="ricerca.html"></a>-->
-  			<h2 id= "titleNavigation" class="titleNavigation">Università dell'Aquila</h2>
+			<a class="icon icon-search pull-right" data-ignore="push" href="ricerca.html"></a>
+			<h2 id= "titleNavigation" class="titleNavigation">Università dell'Aquila</h2>
 		</header>
 
 		<div class="filter bar bar-standard bar-header-secondary">
@@ -176,8 +175,14 @@
 				</a>
 
 			</nav>
+
 			<link href="css/widgets.css" rel="stylesheet">
+			<script src="js/main.js"></script>
+			<script src="js/widgets.js"></script>
+			<script src="js/navigation.js"></script>
+
 
   	</body>
+
 
 </html>
