--- a/www/listaFollowers.html
+++ b/www/listaFollowers.html
@@ -38,15 +38,18 @@
   	<body>
 
 		<!-- Title bar -->
-
 		<header class="bar bar-nav">
+			<a id="menu_btn" class="icon icon-bars pull-left"></a>
+			<a class="icon icon-compose pull-right" data-ignore="push" href="cambiaStatus.html"></a>
+			<a class="icon icon-search pull-right" data-ignore="push" href="ricerca.html"></a>
 			<a href="#myPopover">
-			    <h1 class="title">
+			    <h1 class="title" id="titleNavigation">
 			      Following
 			      <span class="icon icon-caret"></span>
-			    </h1>
+			  </h1>
 		  	</a>
-	  	</header>
+
+		</header>
 
 		<div id="myPopover" class="popover">
 		  <header class="bar bar-nav">
