--- a/www/selezionaAvvistamento.html
+++ b/www/selezionaAvvistamento.html
@@ -37,10 +37,11 @@
   	</head>
   	<body>
 
-		<!-- Title bar -->
 		<header class="bar bar-nav">
-			<!-- <a class="icon icon-left-nav pull-left" data-ignore="push" data-transition="slide" href="index.html"></a> -->
-			<h1 id= "titleNavigation" class="titleNavigation">Scegli chi segnalare</h1>
+			<a id="menu_btn" class="icon icon-bars pull-left"></a>
+			<a class="icon icon-compose pull-right" data-ignore="push" href="cambiaStatus.html"></a>
+			<a class="icon icon-search pull-right" data-ignore="push" href="ricerca.html"></a>
+			<h2 id= "titleNavigation" class="titleNavigation">Scegli chi segnalare</h2>
 		</header>
 
 
@@ -92,6 +93,8 @@
 
 
 	</body>
+
+
 		<!-- Tab Bar -->
 
 
