--- a/www/selezionaPosizioneAvvistamento.html
+++ b/www/selezionaPosizioneAvvistamento.html
@@ -97,13 +97,12 @@
 				      </a>
 				    </li>
 				  </ul>
-				  <button id="buttonPosizione" class="btn btn-positive btn-block">Segnala</button>
+				  <a id="segnalaPosButton">
+					  Segnala
+				  </a>
+				
   			  </form>
 			</div>
-		</div>
-
-		<div id="selezionaPos" class="modal">
-			<span>Segnalazione avvenuta</span>
 		</div>
 		<script src="js/profWatch.js"></script>
   	</body>
