--- a/www/selezionaPosizioneAvvistamento.html
+++ b/www/selezionaPosizioneAvvistamento.html
@@ -97,10 +97,7 @@
 				      </a>
 				    </li>
 				  </ul>
-				  <a id="segnalaPosButton">
-					  Segnala
-				  </a>
-				
+					<button id="segnalaPosButton" class="btn btn-positive btn-block">Segnala</button>
   			  </form>
 			</div>
 		</div>
