--- a/www/selezionaPosizioneAvvistamento.html
+++ b/www/selezionaPosizioneAvvistamento.html
@@ -72,7 +72,7 @@
 					<label>Luogo</label>
 				    <input type="text" placeholder="Sconosciuto">
 				</div>
-				<button class="btn btn-positive btn-block">Segnala</button>
+				<button id="segnalaPosButton" class="btn btn-positive btn-block">Segnala</button>
 			  </form>
 			  <form class="input-group" id="formNormal" hidden>
 				  <ul class="table-view">
@@ -97,9 +97,22 @@
 				      </a>
 				    </li>
 				  </ul>
-					<button id="segnalaPosButton" class="btn btn-positive btn-block">Segnala</button>
+					<button id="segnalaProfButton2" class="btn btn-positive btn-block">Segnala</button>
   			  </form>
 			</div>
+		</div>
+
+		<div class="modal" id="modalDivPos">
+			<header class="bar bar-nav">
+			   <a class="icon icon-close pull-right" href="selezionaAvvistamento.html"></a>
+			   <h1 class="title">Segnalazione posizione</h1>
+			 </header>
+
+			 <div class="content">
+			   <h4 class="content-padded">
+				   La posizione è stata segnalata con successo
+			  </h4>
+			 </div>
 		</div>
 		<script src="js/profWatch.js"></script>
   	</body>
