--- a/www/FollowersCoppito1.html
+++ b/www/FollowersCoppito1.html
@@ -2,7 +2,7 @@
 
 <div id="P0" class="card">
 	<ul class="table-view">
-  		<li class="table-view-cell media">
+  		<li class="table-view-cell accordion_card media">
     		<a class="navigate-right frecciaProfilo">
 	      		<img class="media-object pull-left cardImage" src="img/matteo.jpg">
 		      	<div class="media-body">Matteo Polsinelli</div>
@@ -17,7 +17,7 @@
     		</a>
   		</li>
 
-  		<li class="table-view-cell media">
+  		<li class="table-view-cell accordion_card media">
     		<a>
 	      		<img class="media-object pull-left cardImage" src="img/davide.jpg">
 				<div class="media-body">Davide Giancola</div>
@@ -36,7 +36,7 @@
 
 <div id="P1" class="card">
 	<ul class="table-view">
-  		<li class="table-view-cell media">
+  		<li class="table-view-cell accordion_card media">
     		<a>
 	      		<img class="media-object pull-left cardImage" src="img/matteo.jpg">
 				<div class="media-body">Matteo Polsinelli</div>
@@ -51,7 +51,7 @@
     		</a>
   		</li>
 
-  		<li class="table-view-cell media">
+  		<li class="table-view-cell accordion_card media">
     		<a>
 	      		<img class="media-object pull-left cardImage" src="img/davide.jpg">
 				<div class="media-body">Davide Giancola</div>
@@ -70,7 +70,7 @@
 
 <div id="P2" class="card">
 	<ul class="table-view">
-  		<li class="table-view-cell media">
+  		<li class="table-view-cell accordion_card media">
     		<a>
 	      		<img class="media-object pull-left cardImage" src="img/matteo.jpg">
 				<div class="media-body">Matteo Polsinelli</div>
@@ -85,7 +85,7 @@
     		</a>
   		</li>
 
-  		<li class="table-view-cell media">
+  		<li class="table-view-cell accordion_card media">
     		<a>
 	      		<img class="media-object pull-left cardImage" src="img/davide.jpg">
 				<div class="media-body">Davide Giancola</div>
