--- a/www/home.html
+++ b/www/home.html
@@ -30,7 +30,7 @@
 		<script src="libs/SnapJs/snap.min.js"></script>
 		<script src="js/main.js"></script>
         <script src="libs/jquery.mobile.custom/jquery.mobile.custom.min.js"></script>
-		<script>
+        <script>
 	    	$(document).bind('mobileinit',function(){
 	        $.mobile.changePage.defaults.changeHash = false;
 	        $.mobile.hashListeningEnabled = false;
@@ -39,7 +39,7 @@
 		</script>
 
 		<link href="css/accordion.css" rel="stylesheet">
-
+        <link href="css/widgets.css" rel="stylesheet">
   	</head>
   	<body>
 
@@ -139,7 +139,7 @@
 			    </div>
 			</div>
 		</div>
-		<script src="js/navigation.js"></script>
+			<script src="js/navigation.js"></script>
 		</div>
 
 
