--- a/www/Aule.html
+++ b/www/Aule.html
@@ -3,49 +3,49 @@
 <div id="auleLibere">
 	<ul class="table-view spazio-nav">
   		<li class="table-view-cell">
-  		    <a  class="navigate-right" data-transition="slide" href="orarioAula.html">
+  		    <a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioAula.html">
 		      	<div class="media-body">Aula 2.2</div>
 		      	<div class="media-body labelPosizione">Coppito > Coppito 1 > Piano 2</div>
   		    </a>
   		</li>
   		<li class="table-view-cell">
-  		    <a  class="navigate-right" data-transition="slide" href="orarioAula.html">
+  		    <a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioAula.html">
 		      	<div class="media-body">Aula 2.5</div>
 		      	<div class="media-body labelPosizione">Coppito > Coppito 1 > Piano 2</div>
   		    </a>
   		</li>
   		<li class="table-view-cell">
-  		    <a  class="navigate-right" data-transition="slide" href="orarioAula.html">
+  		    <a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioAula.html">
 		      	<div class="media-body">Aula 1.4</div>
 		      	<div class="media-body labelPosizione">Coppito > Coppito 1 > Piano 1</div>
   		    </a>
   		</li>
   		<li class="table-view-cell">
-  		    <a  class="navigate-right" data-transition="slide" href="orarioAula.html">
+  		    <a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioAula.html">
 		      	<div class="media-body">Aula 0.6</div>
 		      	<div class="media-body labelPosizione">Coppito > Coppito 1 > Piano 0</div>
   		    </a>
   		</li>
   		<li class="table-view-cell">
-  		    <a  class="navigate-right" data-transition="slide" href="orarioAula.html">
+  		    <a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioAula.html">
 		      	<div class="media-body">Aula C1.9</div>
 		      	<div class="media-body labelPosizione">Coppito > Coppito 2 > Piano 1</div>
   		    </a>
   		</li>
   		<li class="table-view-cell">
-  		    <a  class="navigate-right" data-transition="slide" href="orarioAula.html">
+  		    <a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioAula.html">
 		      	<div class="media-body">Aula C2.4</div>
 		      	<div class="media-body labelPosizione">Coppito > Coppito 2 > Piano 2</div>
   		    </a>
   		</li>
   		<li class="table-view-cell">
-  		    <a  class="navigate-right" data-transition="slide" href="orarioAula.html">
+  		    <a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioAula.html">
 		      	<div class="media-body">Aula M1.0</div>
 		      	<div class="media-body labelPosizione">Medicina > Blocco 5 > Piano 1</div>
   		    </a>
   		</li>
   		<li class="table-view-cell">
-  		    <a  class="navigate-right" data-transition="slide" href="orarioAula.html">
+  		    <a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioAula.html">
 		      	<div class="media-body">Aula M2.3</div>
 		      	<div class="media-body labelPosizione">Medicina > Blocco 5 > Piano 2</div>
   		    </a>
@@ -57,7 +57,7 @@
 <div id="auleTutte">
 	<ul class="table-view spazio-nav">
   		<li class="table-view-cell">
-  		    <a  class="navigate-right" data-transition="slide" href="orarioAula.html">
+  		    <a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioAula.html">
 		      	<span class="media-body">Aula 2.2</span>
 		      	<span class="statusAula pull-right">
 					<span class="aula_libera icon"></span>
@@ -67,7 +67,7 @@
   		    </a>
   		</li>
   		<li class="table-view-cell">
-  		    <a  class="navigate-right" data-transition="slide" href="orarioAula.html">
+  		    <a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioAula.html">
 		      	<span class="media-body">Aula 2.3</span>
 		      	<span class="statusAula pull-right">
     					<span class="aula_occupata icon"></span>
@@ -77,7 +77,7 @@
   		    </a>
   		</li>
   		<li class="table-view-cell">
-  		    <a  class="navigate-right" data-transition="slide" href="orarioAula.html">
+  		    <a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioAula.html">
 		      	<span class="media-body">Aula 2.4</span>
 		      	<span class="statusAula pull-right">
     					<span class="aula_occupata icon"></span>
@@ -87,7 +87,7 @@
   		    </a>
   		</li>
   		<li class="table-view-cell">
-  		    <a  class="navigate-right" data-transition="slide" href="orarioAula.html">
+  		    <a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioAula.html">
 		      	<span class="media-body">Aula 2.5</span>
 		      	<span class="statusAula pull-right">
 					<span class="aula_libera icon"></span>
@@ -97,7 +97,7 @@
   		    </a>
   		</li>
   		<li class="table-view-cell">
-  		    <a  class="navigate-right" data-transition="slide" href="orarioAula.html">
+  		    <a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioAula.html">
 		      	<span class="media-body">Aula 2.1</span>
 		      	<span class="statusAula pull-right">
     					<span class="aula_occupata icon"></span>
@@ -107,7 +107,7 @@
   		    </a>
   		</li>
   		<li class="table-view-cell">
-  		    <a  class="navigate-right" data-transition="slide" href="orarioAula.html">
+  		    <a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioAula.html">
 		      	<span class="media-body">Aula 1.1</span>
 		      	<span class="statusAula pull-right">
     					<span class="aula_occupata icon"></span>
@@ -117,7 +117,7 @@
   		    </a>
   		</li>
   		<li class="table-view-cell">
-  		    <a  class="navigate-right" data-transition="slide" href="orarioAula.html">
+  		    <a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioAula.html">
 		      	<span class="media-body">Aula 1.1</span>
 		      	<span class="statusAula pull-right">
     					<span class="aula_occupata icon"></span>
@@ -127,7 +127,7 @@
   		    </a>
   		</li>
   		<li class="table-view-cell">
-  		    <a  class="navigate-right" data-transition="slide" href="orarioAula.html">
+  		    <a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioAula.html">
 		      	<span class="media-body">Aula 1.2</span>
 		      	<span class="statusAula pull-right">
     					<span class="aula_occupata icon"></span>
@@ -137,7 +137,7 @@
   		    </a>
   		</li>
   		<li class="table-view-cell">
-  		    <a  class="navigate-right" data-transition="slide" href="orarioAula.html">
+  		    <a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioAula.html">
 		      	<span class="media-body">Aula 1.3</span>
 		      	<span class="statusAula pull-right">
     					<span class="aula_occupata icon"></span>
@@ -147,7 +147,7 @@
   		    </a>
   		</li>
   		<li class="table-view-cell">
-  		    <a  class="navigate-right" data-transition="slide" href="orarioAula.html">
+  		    <a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioAula.html">
 		      	<span class="media-body">Aula 1.4</span>
 		      	<span class="statusAula pull-right">
 					<span class="aula_libera icon"></span>
