--- a/www/corsiDaDash.html
+++ b/www/corsiDaDash.html
@@ -41,7 +41,7 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-  			<a class="icon icon-left-nav pull-left" data-ignore="push" href="#" data-transition="slide" data-direction="reverse"></a>
+  			<a class="icon icon-left-nav pull-left" data-ignore="push" href="index.html" data-transition="slide" data-direction="reverse"></a>
   			<h1 class="title">Corsi</h1>
 		</header>
 		<div class="snap-drawers">
