--- a/www/menuMensa.html
+++ b/www/menuMensa.html
@@ -47,29 +47,48 @@
 
 
 		<div class="content">
-			<div class="filter">
-				<div class="segmented-control">
-				    <a class="control-item active">Lunedi</a>
-				    <a class="control-item">Martedi</a>
-				    <a class="control-item">Mercoledi</a>
-				    <a class="control-item">Giovedi</a>
-					<a class="control-item">Venerdi</a>
-		  		</div>
+
+
+			<div class="card">
+				<div class="ui-grid-a">
+					<div class="ui-block-a">
+						<img src="img/openMensa.png" class="cardOrarioMensa">
+						<h6 class="orarioMensa">12:00</h6>
+					</div>
+					<div class="ui-block-b">
+						<img src="img/closeMensa.png" class="cardOrarioMensa">
+						<h6 class="orarioMensa">14:00</h6>
+					</div>
+					<div class="ui-block-c">
+					</div>
+				</div>
+
 			</div>
+			<div class="card">
+				<div class="filter">
+					<div class="segmented-control">
+					    <a class="control-item active">Lunedi</a>
+					    <a class="control-item">Martedi</a>
+					    <a class="control-item">Mercoledi</a>
+					    <a class="control-item">Giovedi</a>
+						<a class="control-item">Venerdi</a>
+			  		</div>
+				</div>
 
-			<ul class="table-view">
-				<li class="table-view-cell table-view-divider">Primi</li>
-				<li class="table-view-cell media">Lasagne</li>
-				<li class="table-view-cell media">Pasta al ragù</li>
+				<ul class="table-view">
+					<li class="table-view-cell table-view-divider">Primi</li>
+					<li class="table-view-cell media">Lasagne</li>
+					<li class="table-view-cell media">Pasta al ragù</li>
 
 
-				<li class="table-view-cell table-view-divider">Secondi</li>
-				<li class="table-view-cell media">Carne</li>
-				<li class="table-view-cell media">Pesce</li>
-			</ul>
+					<li class="table-view-cell table-view-divider">Secondi</li>
+					<li class="table-view-cell media">Carne</li>
+					<li class="table-view-cell media">Pesce</li>
+				</ul>
+			</div>
 		</div>
 
 		<!-- Tab Bar -->
-	
+
   	</body>
 </html>
