--- a/www/schedaPolo.html
+++ b/www/schedaPolo.html
@@ -78,13 +78,16 @@
 						<a>
 						   <span class="media-object pull-left icon icon-pages"></span>
 						   Ambiente intelligente
-						   <span class="icon icon-info"></span>
+						   		<span id="infoAmbienteIntelligente" class="icon icon-info"></span>
+					   		
 							<div class="toggle">
 								<div class="toggle-handle"></div>
 							</div>
 						</a>
 					</li>
 				</ul>
+
+
 		</div>
 
 		<nav class="bar bar-tab">
@@ -111,6 +114,20 @@
 				</span>
 			</a>
 		</nav>
+
+		<div class="modal" id="modalDivInfoNav">
+			<header class="bar bar-nav">
+			   <a class="icon icon-close pull-right" id="closeInfoNavInt"></a>
+			   <h1 class="title">Navigazione Intelligente</h1>
+			 </header>
+
+			 <div class="content">
+			   <p class="content-padded">
+				   La navigazione intelligente permette di bla bla bla
+			  </p>
+			 </div>
+		</div>
+		<script src="js/schedaPoloInfo.js"></script>
 
   	</body>
 </html>
