--- a/www/CorsiDash.html
+++ b/www/CorsiDash.html
@@ -3,27 +3,27 @@
 	<div id="corsiSeguiti">
 		<ul class="table-view">
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Analisi Matematica 1</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 		  			<div class="media-body">Geometria</div>
 		  		</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Fondamenti di informatica</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Fisica generale I</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Calcolo delle probabilità</div>
 	  			</a>
 			</li>
@@ -33,132 +33,132 @@
 	<div id="corsiTutti">
 		<ul class="table-view">
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Analisi Matematica 1</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Geometria</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Fondamenti di informatica</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-	  			<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+	  			<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Analisi matematica II</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-	  			<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+	  			<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Fisica generale I</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Calcolo delle probabilità</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Lingua inglese livello B1</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Fisica generale II</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Analisi numerica e complementi di matematica</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Elettrotecnica</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Teoria dei sistemi</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Elettronica I</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Calcolatori elettronici</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Analisi ed elaborazione dei segnali</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Programmazione ad oggetti</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Economia applicata all'ingegneria</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Basi dati</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Controlli automatici</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Reti di calcolatori</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Programmazione per il web</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Sistemi operarivi</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Calcolo delle probabilità</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Lingua inglese livello B1</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Misure elettriche</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Reti di telecomunicazioni I</div>
 	  			</a>
 			</li>
 			<li class="table-view-cell media">
-				<a  class="navigate-right" data-transition="slide" href="orarioCorso.html">
+				<a  class="navigate-right" data-ignore="push" data-transition="slide" href="orarioCorso.html">
 	  				<div class="media-body">Ingegneria e tecnologia dei sistemi di controllo</div>
 	  			</a>
 			</li>
