--- a/www/ProfessoriCoppito1.html
+++ b/www/ProfessoriCoppito1.html
@@ -2,7 +2,7 @@
 
 <div id="P0" class="card">
 	<ul class="table-view">
-  		<li class="table-view-cell media">
+  		<li class="table-view-cell accordion_card media">
     		<a class="navigate-right frecciaProf">
 	      		<img class="media-object pull-left cardImage" src="img/manes.jpg">
 		      	<div class="media-body">Costanzo Manes</div>
@@ -16,7 +16,7 @@
     		</a>
   		</li>
 
-  		<li class="table-view-cell media">
+  		<li class="table-view-cell accordion_card media">
     		<a>
 	      		<img class="media-object pull-left cardImage" src="img/pepe.jpg">
 				<div class="media-body">Pierdomenico Pepe</div>
@@ -34,7 +34,7 @@
 
 <div id="P1" class="card">
 	<ul class="table-view">
-  		<li class="table-view-cell media">
+  		<li class="table-view-cell accordion_card media">
     		<a>
 	      		<img class="media-object pull-left cardImage" src="img/manes.jpg">
 		      	<div class="media-body">Costanzo Manes</div>
@@ -48,7 +48,7 @@
     		</a>
   		</li>
 
-  		<li class="table-view-cell media">
+  		<li class="table-view-cell accordion_card media">
     		<a>
 	      		<img class="media-object pull-left cardImage" src="img/pepe.jpg">
 				<div class="media-body">Pierdomenico Pepe</div>
@@ -66,7 +66,7 @@
 
 <div id="P2" class="card">
 	<ul class="table-view">
-		<li class="table-view-cell media">
+		<li class="table-view-cell accordion_card media">
 			<a>
 				<img class="media-object pull-left cardImage" src="img/manes.jpg">
 				<div class="media-body">Costanzo Manes</div>
@@ -80,7 +80,7 @@
 			</a>
 		</li>
 
-		<li class="table-view-cell media">
+		<li class="table-view-cell accordion_card media">
 			<a>
 				<img class="media-object pull-left cardImage" src="img/pepe.jpg">
 				<div class="media-body">Pierdomenico Pepe</div>
