--- a/www/home.html
+++ b/www/home.html
@@ -39,7 +39,7 @@
 		</script>
 
 		<link href="css/accordion.css" rel="stylesheet">
-        <link href="css/widgets.css" rel="stylesheet">
+   
   	</head>
   	<body>
 
@@ -58,10 +58,11 @@
 		</div>
 
 		<header class="bar bar-nav">
-			<a id="menu_btn" class="icon icon-bars pull-left"></a>
+			<a id="freccia_indietro" class="icon icon-left-nav pull-left"></a>
+  			<a id="menu_btn" class="icon icon-bars pull-left"></a>
 			<a class="icon icon-compose pull-right" data-ignore="push" href="cambiaStatus.html"></a>
 			<a class="icon icon-search pull-right" data-ignore="push" href="ricerca.html"></a>
-			<h2 id= "titleNavigation" class="titleNavigation">Università dell'Aquila</h2>
+			<h2 class="titleNavigation">Università dell'Aquila</h2>
 		</header>
 
 		<div class="filter bar bar-standard bar-header-secondary">
@@ -138,7 +139,7 @@
 			        <p>Collapsible content, swatch "d"</p>
 			    </div>
 			</div>
-		</div>
+			<link href="css/widgets.css" rel="stylesheet">
 			<script src="js/navigation.js"></script>
 		</div>
 
@@ -176,8 +177,7 @@
 
 			</nav>
 
-				<script src="js/navigation.js"></script>
-			<link href="css/widgets.css" rel="stylesheet">
+
 
 
 
