--- a/www/profile_prof_visitato_from_navigation.html
+++ b/www/profile_prof_visitato_from_navigation.html
@@ -48,9 +48,9 @@
 					<a>
 							<li class="table-view-cell pulito">
 						    	<span class="media-object">
-					    			<img class="media-object widgeticon" src="img/position.png">
+					    			<img class="media-object position_profile_visitato_icon" src="img/position.png">
 					    		</span>
-						      	<span class="media-body">
+						      	<span class="media-body position_profile_visitato_text">
 						        Posizione: coppito-blocco 1-piano 2
 					      		</span>
 							</li>
