--- a/www/profile_visitato_from_navigation.html
+++ b/www/profile_visitato_from_navigation.html
@@ -2,7 +2,7 @@
 <html>
   	<div class="content">
 			<ul class="table-view">
-				<li class="card pulito">
+				<li class="pulito">
                     <img class="imageProfile profilo-image" src="img/matteo.jpg">
                       <span class="media-object pull-left  "><img class="email-icon" src="./img/email-icon.png"></span>
                               <div class="media-body email-text">
@@ -13,7 +13,7 @@
 			</ul>
 
 			<ul class="table-view">
-				  <li class="card pulito">
+				  <li class="pulito">
 
 					  	<ul class="table-view pulito ">
 						<li class="table-view-cell pulito">
@@ -28,9 +28,9 @@
 						<li class="table-view-cell pulito">
 					    <a>
 					    	<span class="media-object">
-					    		<img class="media-object widgeticon" src="img/position.png">
+					    		<img class="media-object position_profile_visitato_icon" src="img/position.png">
 					    	</span>
-					      	<span class="media-body">
+					      	<span class="media-body position_profile_visitato_text">
 					        Posizione: coppito-blocco 1-piano 2
 					      	</span>
 						</a>
