BUG FIX FOLLOWER E SEGNALA

--- a/www/selezionaAvvistamento.html
+++ b/www/selezionaAvvistamento.html
@@ -47,14 +47,14 @@
 
 			<div class="filter bar bar-standard bar-header-secondary">
 				<div class="segmented-control">
-				    <a id="followerAmici" class="control-item active">Amici</a>
-				    <a id="followerProf" class="control-item">Professori</a>
+				    <a id="followerAmici_spara" class="control-item active">Amici</a>
+				    <a id="followerProf_spara" class="control-item">Professori</a>
 		  		</div>
 			</div>
 
 			<!-- Lista follower Amici -->
-			<div id="filtrofollower" class="content">
-			<div id="lista">
+			<div id="filtrofollower_spara" class="content">
+			<div id="lista_spara">
 
 			<script src="js/filtroSparaFollower.js"></script>
 			<link href="css/followers.css" rel="stylesheet">
