general css fix

--- a/www/corsiProfiloVisitato.html
+++ b/www/corsiProfiloVisitato.html
@@ -37,7 +37,7 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-			<a class="icon icon-left-nav pull-left" data-ignore="push" data-transition="slide" data-direction="reverse" href="#"></a>
+			<a class="icon icon-left-nav pull-left" data-ignore="push" data-transition="slide" data-direction="reverse" href="profile_visitato.html"></a>
   			<h1 class="title">Corsi seguiti</h1>
 		</header>
 
