--- a/www/listaFollowers.html
+++ b/www/listaFollowers.html
@@ -43,7 +43,7 @@
 			<a class="icon icon-compose pull-right" data-ignore="push" href="cambiaStatus.html"></a>
 			<a class="icon icon-search pull-right" data-ignore="push" href="ricerca.html"></a>
 			<a href="#myPopover">
-			    <h1 class="title" id="titleNavigation">
+			    <h1 class="title following_title" id="titleNavigation">
 			      Following
 			      <span class="icon icon-caret"></span>
 			  </h1>
