--- a/www/notifiche_follower_navigation.html
+++ b/www/notifiche_follower_navigation.html
@@ -37,7 +37,7 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-  			<a class="icon icon-left-nav pull-left" data-ignore="push" data-transition="slide" data-direction="reverse" href="profile_visitato_from_navigation.html"></a>
+  			<a class="icon icon-left-nav pull-left" data-ignore="push" data-transition="slide" data-direction="reverse" href="profile_visitato.html"></a>
   			<h1 class="title">Voglio ricevere notifiche quando è</h1>
 		</header>
 
