--- a/www/profile_visitato_from_navigation.html
+++ b/www/profile_visitato_from_navigation.html
@@ -47,7 +47,7 @@
 					     </a> 	
 						 </li>
 						 <li class="table-view-cell pulito">
-							<a class="navigate-right"  href="corsiProfiloVisitato.html" data-transition="slide">
+							<a class="navigate-right" data-ignore="push" href="corsiProfiloVisitato.html" data-transition="slide">
 						    	<span class="media-object pull-left icon icon-pages"></span>
 						      	<div class="media-body">
 						        Corsi seguiti
