--- a/www/auleVicine.html
+++ b/www/auleVicine.html
@@ -64,11 +64,18 @@
 		</div>
 			
 		<!-- Tab Bar -->
-			<nav class="bar bar-tab">
-	  			<a class="tab-item tab-item-selected" data-ignore="push" href="index.html">
+				<nav class="bar bar-tab">
+	  			<a class="tab-item" data-ignore="push" href="index.html">
 	    			<span class="icon icon-home"></span>
 	  			</a>
-				<a class="tab-item" data-ignore="push" href="profile.html">
+
+				<a class="tab-item" data-ignore="push" href="home.html">
+					<span class="media-object">
+						<img src="img/launchpad.png" class="followersImage">
+					</span>
+				</a>
+
+				<a class="tab-item" data-ignore="push" href="cambiaStatus.html">
 					<span class="icon icon-compose"></span>
 				</a>
 
@@ -82,11 +89,7 @@
 						<img src="img/followers.png" class="followersImage">
 					</span>
 				</a>
-				<a class="tab-item" data-ignore="push" href="selezionaProfAvvistamento.html">
-					<span class="media-object">
-						<img src="img/profMirino.png" class="followersImage">
-					</span>
-				</a>
+
 			</nav>
 		<link href="css/aule.css" rel="stylesheet">
 		<script src="js/filtroAule.js"></script>
