--- a/www/cambiaStatus.html
+++ b/www/cambiaStatus.html
@@ -75,6 +75,33 @@
 
 		<script src="js/profWatch.js"></script>
 
+		<nav class="bar bar-tab">
+	  			<a class="tab-item" data-ignore="push" href="index.html">
+	    			<span class="icon icon-home"></span>
+	  			</a>
+
+				<a class="tab-item" data-ignore="push" href="home.html">
+					<span class="media-object">
+						<img src="img/launchpad.png" class="followersImage">
+					</span>
+				</a>
+
+				<a class="tab-item" data-ignore="push" href="cambiaStatus.html">
+					<span class="icon icon-compose"></span>
+				</a>
+
+				<a class="tab-item" data-ignore="push" href="gestione_notifiche.html">
+					<span class="media-object">
+						<img src="img/notifiche.png" class="followersImage">
+					</span>
+				</a>
+				<a class="tab-item" data-ignore="push" href="listaFollowers.html">
+					<span class="media-object">
+						<img src="img/followers.png" class="followersImage">
+					</span>
+				</a>
+
+			</nav>
   	</body>
 
 </html>
