--- a/www/index.html
+++ b/www/index.html
@@ -55,11 +55,10 @@
 		<div id="menu_index" class="content snap-content">
 
 		<header class="bar bar-nav">
-	
 			<a id="menu_btn_index" class="icon icon-bars pull-left"></a>
+			<a class="icon icon-compose pull-right" data-ignore="push" href="cambiaStatus.html"></a>
 			<a class="icon icon-search pull-right" data-ignore="push" href="ricerca.html"></a>
-
-  			<h2  class="titleNavigation">Università dell'Aquila</h2>
+			<h2 class="titleNavigation">Università dell'Aquila</h2>
 		</header>
 
 
