--- a/www/listaFollowers.html
+++ b/www/listaFollowers.html
@@ -84,8 +84,8 @@
 		
 
 			</div>
-			<nav class="bar bar-tab">
-	  			<a class="tab-item active tab-item-selected" data-ignore="push" href="index.html">
+				<nav class="bar bar-tab">
+	  			<a class="tab-item" data-ignore="push" href="index.html">
 	    			<span class="icon icon-home"></span>
 	  			</a>
 
@@ -95,10 +95,8 @@
 					</span>
 				</a>
 
-				<a class="tab-item" data-ignore="push" href="selezionaAvvistamento.html">
-					<span class="media-object">
-						<img src="img/profMirino.png" class="followersImage">
-					</span>
+				<a class="tab-item" data-ignore="push" href="cambiaStatus.html">
+					<span class="icon icon-compose"></span>
 				</a>
 
 				<a class="tab-item" data-ignore="push" href="gestione_notifiche.html">
@@ -113,7 +111,6 @@
 				</a>
 
 			</nav>
-
 	<script src="js/filtrofollower.js"></script>
 			<link href="css/followers.css" rel="stylesheet">
 
