--- a/www/gestisciPrivacy.html
+++ b/www/gestisciPrivacy.html
@@ -128,10 +128,17 @@
 		</div>
 
 		<nav class="bar bar-tab">
-	  			<a class="tab-item active " data-ignore="push" href="index.html">
+	  			<a class="tab-item" data-ignore="push" href="index.html">
 	    			<span class="icon icon-home"></span>
 	  			</a>
-				<a class="tab-item" data-ignore="push" href="profile.html">
+
+				<a class="tab-item" data-ignore="push" href="home.html">
+					<span class="media-object">
+						<img src="img/launchpad.png" class="followersImage">
+					</span>
+				</a>
+
+				<a class="tab-item" data-ignore="push" href="cambiaStatus.html">
 					<span class="icon icon-compose"></span>
 				</a>
 
@@ -145,11 +152,7 @@
 						<img src="img/followers.png" class="followersImage">
 					</span>
 				</a>
-				<a class="tab-item" data-ignore="push" href="selezionaProfAvvistamento.html">
-					<span class="media-object">
-						<img src="img/profMirino.png" class="followersImage">
-					</span>
-				</a>
+
 			</nav>
   	</body>
 </html>
