--- a/www/profile_prof.html
+++ b/www/profile_prof.html
@@ -104,28 +104,31 @@
 				</ul>
 			</div>
 			<nav class="bar bar-tab">
-	  			<a class="tab-item active" href="#">
+	  			<a class="tab-item" data-ignore="push" href="index.html">
 	    			<span class="icon icon-home"></span>
-	    			<span class="tab-label">Home</span>
 	  			</a>
-				<a class="tab-item" href="#">
-					<span class="icon icon-person"></span>
-				    <span class="tab-label">Profilo</span>
+
+				<a class="tab-item" data-ignore="push" href="home.html">
+					<span class="media-object">
+						<img src="img/launchpad.png" class="followersImage">
+					</span>
 				</a>
-				<a class="tab-item" href="#">
-					<span class="icon icon-search"></span>
-				    <span class="tab-label">Cerca</span>
+
+				<a class="tab-item" data-ignore="push" href="cambiaStatus.html">
+					<span class="icon icon-compose"></span>
 				</a>
-				<a class="tab-item" href="#">
+
+				<a class="tab-item" data-ignore="push" href="gestione_notifiche.html">
+					<span class="media-object">
+						<img src="img/notifiche.png" class="followersImage">
+					</span>
+				</a>
+				<a class="tab-item" data-ignore="push" href="listaFollowers.html">
 					<span class="media-object">
 						<img src="img/followers.png" class="followersImage">
 					</span>
-				    <span class="tab-label">Followers</span>
 				</a>
-				<a class="tab-item" href="#">
-					<span class="icon icon-bars"></span>
-				    <span class="tab-label">Menu</span>
-				</a>
+
 			</nav>
   	</body>
 </html>
