--- a/www/ricerca.html
+++ b/www/ricerca.html
@@ -73,7 +73,7 @@
 		</div>
 		
 			<nav class="bar bar-tab">
-	  			<a class="tab-item active tab-item-selected" data-ignore="push" href="index.html">
+	  			<a class="tab-item" data-ignore="push" href="index.html">
 	    			<span class="icon icon-home"></span>
 	  			</a>
 
@@ -99,7 +99,6 @@
 				</a>
 
 			</nav>
-
 
 		
   	</body>
