--- a/www/schedaPoloDaDash.html
+++ b/www/schedaPoloDaDash.html
@@ -88,29 +88,32 @@
 		</div>
 
 		<nav class="bar bar-tab">
-  			<a class="tab-item active tab-item-selected" href="index.html">
-    			<span class="icon icon-home"></span>
-  			</a>
-			<a class="tab-item" href="profile.html">
-				<span class="icon icon-compose"></span>
-			</a>
+	  			<a class="tab-item" data-ignore="push" href="index.html">
+	    			<span class="icon icon-home"></span>
+	  			</a>
 
-			<a class="tab-item" href="gestione_notifiche.html">
-				<span class="media-object">
-					<img src="img/notifiche.png" class="followersImage">
-				</span>
-			</a>
-			<a class="tab-item" href="listaFollowers.html">
-				<span class="media-object">
-					<img src="img/followers.png" class="followersImage">
-				</span>
-			</a>
-			<a class="tab-item" href="selezionaProfAvvistamento.html">
-				<span class="media-object">
-					<img src="img/profMirino.png" class="followersImage">
-				</span>
-			</a>
-		</nav>
+				<a class="tab-item" data-ignore="push" href="home.html">
+					<span class="media-object">
+						<img src="img/launchpad.png" class="followersImage">
+					</span>
+				</a>
+
+				<a class="tab-item" data-ignore="push" href="cambiaStatus.html">
+					<span class="icon icon-compose"></span>
+				</a>
+
+				<a class="tab-item" data-ignore="push" href="gestione_notifiche.html">
+					<span class="media-object">
+						<img src="img/notifiche.png" class="followersImage">
+					</span>
+				</a>
+				<a class="tab-item" data-ignore="push" href="listaFollowers.html">
+					<span class="media-object">
+						<img src="img/followers.png" class="followersImage">
+					</span>
+				</a>
+
+			</nav>
 
   	</body>
 </html>
