UPDATE ALL NAVBAR POST CAPPELLA!!!

--- a/www/orarioCorso.html
+++ b/www/orarioCorso.html
@@ -87,7 +87,7 @@
 		</div>
 			
 		<!-- Tab Bar -->
-				<nav class="bar bar-tab">
+<nav class="bar bar-tab">
 	  			<a class="tab-item" data-ignore="push" href="index.html">
 	    			<span class="icon icon-home"></span>
 	  			</a>
@@ -98,8 +98,10 @@
 					</span>
 				</a>
 
-				<a class="tab-item" data-ignore="push" href="cambiaStatus.html">
-					<span class="icon icon-compose"></span>
+				<a class="tab-item" data-ignore="push" href="selezionaAvvistamento.html">
+					<span class="media-object">
+						<img src="img/profMirino.png" class="followersImage">
+					</span>
 				</a>
 
 				<a class="tab-item" data-ignore="push" href="gestione_notifiche.html">
