--- a/www/notifiche_follower_navigation.html
+++ b/www/notifiche_follower_navigation.html
@@ -66,8 +66,10 @@
 					</span>
 				</a>
 
-				<a class="tab-item" data-ignore="push" href="cambiaStatus.html">
-					<span class="icon icon-compose"></span>
+				<a class="tab-item" data-ignore="push" href="selezionaAvvistamento.html">
+					<span class="media-object">
+						<img src="img/profMirino.png" class="followersImage">
+					</span>
 				</a>
 
 				<a class="tab-item" data-ignore="push" href="gestione_notifiche.html">
