--- a/www/selezionaPosizioneAvvistamento.html
+++ b/www/selezionaPosizioneAvvistamento.html
@@ -115,9 +115,8 @@
 			 </div>
 		</div>
 		<script src="js/profWatch.js"></script>
-  	</body>
-
-	<nav class="bar bar-tab">
+		
+		<nav class="bar bar-tab">
 	  			<a class="tab-item" data-ignore="push" href="index.html">
 	    			<span class="icon icon-home"></span>
 	  			</a>
@@ -128,8 +127,10 @@
 					</span>
 				</a>
 
-				<a class="tab-item" data-ignore="push" href="cambiaStatus.html">
-					<span class="icon icon-compose"></span>
+					<a class="tab-item" data-ignore="push" href="selezionaAvvistamento.html">
+					<span class="media-object">
+						<img src="img/profMirino.png" class="followersImage">
+					</span>
 				</a>
 
 				<a class="tab-item" data-ignore="push" href="gestione_notifiche.html">
@@ -144,5 +145,9 @@
 				</a>
 
 			</nav>
+		
+  	</body>
+
+	
 
 </html>
