--- a/www/selezionaPosizioneAvvistamento.html
+++ b/www/selezionaPosizioneAvvistamento.html
@@ -104,7 +104,7 @@
 
 		<div class="modal" id="modalDivPos">
 			<header class="bar bar-nav">
-			   <a class="icon icon-close pull-right" href="selezionaAvvistamento.html"></a>
+			   <a class="icon icon-close pull-right" data-ignore="push" href="selezionaAvvistamento.html"></a>
 			   <h1 class="title">Segnalazione posizione</h1>
 			 </header>
 
