--- a/www/menuMensa.html
+++ b/www/menuMensa.html
@@ -42,7 +42,7 @@
 		<!-- Title bar -->
 		<header class="bar bar-nav">
   			<a class="icon icon-left-nav pull-left" data-ignore="push" data-transition="slide" data-direction="reverse" href="schedaPolo.html"></a>
-  			<h1 class="title">Menu Mensa</h1>
+  			<h1 class="title">Info Mensa</h1>
 		</header>
 
 
